--- a/index.html
+++ b/index.html
@@ -140,12 +140,12 @@
                     <p><i class="fa-solid fa-paper-plane"></i>sidraabbasi478@gmail.com</p>
                     <p><i class="fa-sharp fa-solid fa-square-phone"></i>+923225520325</p>
                     <div class="social-icons">
-                        <a href=""><i class="fa-brands fa-linkedin"></i></a>
-                        <a href=""><i class="fa-brands fa-instagram"></i></a>
-                        <a href=""><i class="fa-brands fa-facebook"></i></a>
-                        <a href=""><i class="fa-brands fa-square-twitter"></i></a>
+                        <a href="https://www.linkedin.com/in/sidra-sajad-b63998249/" target="_blank"><i class="fa-brands fa-linkedin"></i></a>
+                        <a href="" target="_blank"><i class="fa-brands fa-instagram"></i></a>
+                        <a href="" target="_blank"><i class="fa-brands fa-facebook"></i></a>
+                        <a href="https://github.com/sidrasajad" target="_blank"><i class="fa-brands fa-github"></i></a>
                     </div>
-                    <a href="images/Sidra (Web Developer).pdf" download class="btn btn2">Download CV</a>
+                    <a href="images/Sidra Sajad (Web Developer).pdf" download class="btn btn2">Download CV</a>
                 </div>
                 <div class="contact-right">
                     <form action="">
